# Deep-Egg-Detection-and-Counter

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docker/: entrypoint.sh
src/egg_detection_counter/: __init__.py  detector.py  main.py
src/egg_detection_counter/model/: egg_detector.pt
tests/: test_detector.py  test_logging.py  test_main.py
